--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dropzone-ui/react": "^7.0.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "font-awesome": "^4.7.0",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-froala-wysiwyg": "^4.1.4",
+    "react-mobile-picker": "^1.0.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.2.0",
+    "rmc-date-picker": "^6.0.10",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
