--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@dropzone-ui/react": "^7.0.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "dompurify": "^3.0.8",
     "font-awesome": "^4.7.0",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-froala-wysiwyg": "^4.1.4",
     "react-mobile-picker": "^1.0.0",
     "react-router-dom": "^6.21.0",
