--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "alert": "^6.0.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "buffer": "^6.0.3",
@@ -20,6 +21,8 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-date-picker": "^10.6.0",
+    "react-datetime-picker": "^5.6.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-froala-wysiwyg": "^4.1.4",
