--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "push.js": "^1.0.12",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-date-picker": "^10.6.0",
@@ -29,6 +30,7 @@
     "react-mobile-picker": "^1.0.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "react-tiny-fab": "^4.0.4",
     "react-webcam": "^7.2.0",
     "rmc-date-picker": "^6.0.10",
     "web-vitals": "^2.1.4",
