--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-tiny-fab": "^4.0.4",
     "react-webcam": "^7.2.0",
     "rmc-date-picker": "^6.0.10",
+    "socket.io-client": "^4.7.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
