--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "push.js": "^1.0.12",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-confirm-alert": "^3.0.6",
     "react-date-picker": "^10.6.0",
     "react-datetime-picker": "^5.6.0",
     "react-dom": "^18.2.0",
